(add new changes on top of this file)

Änderungen
----------

v0.11.3 (??.11.2011)
 * util_Link::makeUrlParam(): Sonderfall weiteres Array im Parameter

v0.11.2 (14.11.2011)
 * tx_rnbase_configurations::getPluginUid() will always return a unique id even if plugin is defined by Typoscript.
 * CacheHandlerDefault is ready to use

v0.11.1 (11.11.2011)
 * tx_rnbase_util_DB can be used to access external databases.
 * First caching stategy implemented
 * tx_rnbase_util_FormTool: createTxtInput with $options array.

v0.11.0 (05.11.2011) (not released)
 * CacheManager changed for TYPO3 4.6. It is still possible to use unconfigured caches.
 * tx_rnbase_configurations::getLL fixed for T3 4.6. Thanks to Christian Riesche!

v0.10.9 (27.10.2011) (not released)
 * tx_rnbase_util_FormTool: Hide and Delete Link fixed. FormValidationToken added. Thanks to Hannes Bochmann!

v0.10.8 (27.10.2011) (not released)
 * Default html template for BE modules
 * BE-modules it is possible to add sort links for columns. Thanks to Hannes Bochmann!
 * All debug calls switched to tx_rnbase_util_Debug to avoid deprecation logs
 * tx_rnbase_util_Misc: new method randomizeItems()

v0.10.7 (11.10.2011)
 * BE-Module: New method addMessage to integrate TYPO3 flash messages
 * BE-Handler fully integrated in ExtendedModFunc
 * New common language file locallang.xml

v0.10.6 (30.09.2011) (not released)
 * It is possible to send a 503 service unavailable header if an exception occures. Thanks to Hannes Bochmann!
 * tx_rnbase_util_TYPO3: convenience methods to access uids of BE and FE users
 * new interface tx_rnbase_mod_IModHandler

v0.10.5 (15.09.2011) (not released)
 * FormTool: New method createShowLink.
 * FormTool: use TCA to find hidden and deleted column in createHideLink and createDeleteLink. Thanks to Hannes Bochmann!
 * ErrorMail: Lookup and show current FE and BE user. Thanks to Michael Wagner!

v0.10.4 (16.08.2011) (not released)
 * SearchBase: it is possible to change wrapperclass by options
